--- a/app/stylesheets/alchemy/admin/node-select.scss
+++ b/app/stylesheets/alchemy/admin/node-select.scss
@@ -8,7 +8,6 @@
 .node-select--node {
   display: flex;
   align-items: center;
-  height: 21px;
 
   > alchemy-icon {
     margin: 0 var(--spacing-2) 0 var(--spacing-1);
